--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Ka Ian Website</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -25,19 +25,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/image/background.jpg');
+  background-image: url('/tree/main/image/background.jpg');
   min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/image/portfolio.jpg");
+  background-image: url("/tree/main/image/portfolio.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/image/contact.jpg");
+  background-image: url("/tree/main/image/contact.jpg");
   min-height: 400px;
 }
 
@@ -94,7 +94,7 @@ body, html {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Ka Ian CHAN</b></p><br>
-      <img src="/image/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+      <img src="/tree/main/image/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -156,15 +156,15 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/image/fyp.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="fyp">
+      <img src="/tree/main/image/fyp.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="fyp">
     </div>
 
     <div class="w3-col m3">
-      <img src="/image/ckt.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="ckt">
+      <img src="/tree/main/image/ckt.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="ckt">
     </div>
 
     <div class="w3-col m3">
-      <img src="/image/sun_umbrella.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="sun_umbrella">
+      <img src="/tree/main/image/sun_umbrella.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="sun_umbrella">
     </div>
   </div>
   	<!--
@@ -196,7 +196,7 @@ body, html {
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/image/n42.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="/tree/main/image/n42.jpg" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
