--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/tree/main/image/background.jpg');
+  background-image: url('/image/background.jpg');
   min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/tree/main/image/portfolio.jpg");
+  background-image: url("/image/portfolio.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/tree/main/image/contact.jpg");
+  background-image: url("/image/contact.jpg");
   min-height: 400px;
 }
 
@@ -94,7 +94,7 @@ body, html {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Ka Ian CHAN</b></p><br>
-      <img src="/tree/main/image/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+      <img src="/image/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -156,18 +156,18 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/tree/main/image/fyp.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="fyp">
+      <img src="/image/fyp.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="fyp">
     </div>
 
     <div class="w3-col m3">
-      <img src="/tree/main/image/ckt.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="ckt">
+      <img src="/image/ckt.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="ckt">
     </div>
 
     <div class="w3-col m3">
-      <img src="/tree/main/image/sun_umbrella.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="sun_umbrella">
+      <img src="/image/sun_umbrella.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="sun_umbrella">
     </div>
   </div>
-  	<!--
+    <!--
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
     -->
   </div>
@@ -196,7 +196,7 @@ body, html {
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/tree/main/image/n42.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="/image/n42.jpg" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
@@ -212,8 +212,8 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-	<a href="https://github.com/kaian0414/"><i class="fa fa-github w3-hover-opacity"></i></a>
-	<a href="https://www.linkedin.com/in/kaian0414/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+  <a href="https://github.com/kaian0414/"><i class="fa fa-github w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/kaian0414/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   </div>
 </footer>
  
