--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ka Ian Website - 0226</title>
+<title>Ka Ian Website</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -94,7 +94,7 @@ body, html {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Ka Ian CHAN</b></p><br>
-      <img src="/image/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+      <img src="/image/me.jpg" class="w3-round w3-image" alt="Photo of Me" width="300" height="300">
     </div>
 
     <!-- Hide this text on small devices -->
