--- a/index.html
+++ b/index.html
@@ -212,9 +212,10 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-  <a href="https://github.com/kaian0414/"><i class="fa fa-github w3-hover-opacity"></i></a>
-  <a href="https://www.linkedin.com/in/kaian0414/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://github.com/kaian0414/"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/in/kaian0414/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   </div>
+  <p>Last modifiedL 26-Feb, 2023</p>
 </footer>
  
 <script>
